--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <nav class="header-nav">
           <a href="./index.html" class="logo header-logo">Web<span class="logo-span">Studio</span></a>
             <ul class="nav-menu-page">
-                    <li> <a  href="./index.html" class="nav-menu">Studio</a> </li>
+                    <li> <a  href="./index.html" class="nav-menu current">Studio</a> </li>
                     <li> <a  href="" class="nav-menu">Portfolio</a></li> 
                     <li> <a  href="" class="nav-menu">Contacts</a></li>
             </ul> 
@@ -41,7 +41,7 @@
           <div class="container">
                 <h2 class="title-none">Features</h2>  
                     <ul class="list-feature">
-                      <li class="line-feature"> 
+                      <li class="line-feature">
                          <h3 class="title-feature">Strategy</h3>
                          <p class="descr-feature">Our goal is to identify the business
                         problem to walk away with the perfect and creative solution. </p></li>
