--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                       <li class="line-feature">
                       <div class="icon">
                         <svg width="64" height="64">
-                          <use href="./images/antenna.svg#icon-antenna-1"></use>
+                          <use href="./images/icons.svg#icon-antenna"></use>
                         </svg>
                       </div>
                          <h3 class="title-feature">Strategy</h3>
@@ -53,7 +53,7 @@
                       <li class="line-feature">
                         <div class="icon">
                           <svg width="64" height="64">
-                            <use href="./images/clock.svg#icon-clock-1"></use>
+                            <use href="./images/icons.svg#icon-clock"></use>
                           </svg>
                         </div>
                          <h3 class="title-feature">Punctuality</h3>
@@ -61,7 +61,7 @@
                       <li class="line-feature">  
                        <div class="icon">
                         <svg width="64" height="64">
-                          <use href="./images/diagram.svg#icon-diagram-1"></use>
+                          <use href="./images/icons.svg#icon-diagram"></use>
                         </svg>
                        </div>
                         <h3 class="title-feature">Diligence</h3>
@@ -69,7 +69,7 @@
                        <li class="line-feature"> 
                         <div class="icon">
                           <svg width="64" height="64">
-                            <use href="./images/astronaut.svg#icon-astronaut-1"></use>
+                            <use href="./images/icons.svg#icon-astronaut"></use>
                           </svg>
                         </div>
                         <h3 class="title-feature">Technologies</h3>
@@ -91,28 +91,28 @@
             <li class="icon-line">
               <a href="" class="icon-link">
                 <svg width="16" height="16" class="icon-social">
-                  <use href="./images/instagram.svg#icon-instagram-2"></use>
+                  <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="icon-line">
               <a href="" class="icon-link">
                 <svg width="16" height="16" class="icon-social">
-                  <use href="./images/twitter.svg#icon-twitter-1"></use>
+                  <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="icon-line">
               <a href="" class="icon-link">
                 <svg width="16" height="16" class="icon-social">
-                  <use href="./images/facebook.svg#icon-facebook-1"></use>
+                  <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="icon-line">
               <a href="" class="icon-link">
                 <svg width="16" height="16" class="icon-social">
-                  <use href="./images/linkedin.svg#icon-linkedin-1"></use>
+                  <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
@@ -129,28 +129,28 @@
               <li class="icon-line">
                 <a href="" class="icon-link">
                   <svg width="16" height="16" class="icon-social">
-                    <use href="./images/instagram.svg#icon-instagram-2"></use>
+                    <use href="./images/icons.svg#icon-instagram"></use>
                   </svg>
                 </a>
               </li>
               <li class="icon-line">
                 <a href="" class="icon-link">
                   <svg width="16" height="16" class="icon-social">
-                    <use href="./images/twitter.svg#icon-twitter-1"></use>
+                    <use href="./images/icons.svg#icon-twitter"></use>
                   </svg>
                 </a>
               </li>
               <li class="icon-line">
                 <a href="" class="icon-link">
                   <svg width="16" height="16" class="icon-social">
-                    <use href="./images/facebook.svg#icon-facebook-1"></use>
+                    <use href="./images/icons.svg#icon-facebook"></use>
                   </svg>
                 </a>
               </li>
               <li class="icon-line">
                 <a href="" class="icon-link">
                   <svg width="16" height="16" class="icon-social">
-                    <use href="./images/linkedin.svg#icon-linkedin-1"></use>
+                    <use href="./images/icons.svg#icon-linkedin"></use>
                   </svg>
                 </a>
               </li>
@@ -167,28 +167,28 @@
               <li class="icon-line">
                 <a href="" class="icon-link">
                   <svg width="16" height="16" class="icon-social">
-                    <use href="./images/instagram.svg#icon-instagram-2"></use>
+                    <use href="./images/icons.svg#icon-instagram"></use>
                   </svg>
                 </a>
               </li>
               <li class="icon-line">
                 <a href="" class="icon-link">
                   <svg width="16" height="16" class="icon-social">
-                    <use href="./images/twitter.svg#icon-twitter-1"></use>
+                    <use href="./images/icons.svg#icon-twitter"></use>
                   </svg>
                 </a>
               </li>
               <li class="icon-line">
                 <a href="" class="icon-link">
                   <svg width="16" height="16" class="icon-social">
-                    <use href="./images/facebook.svg#icon-facebook-1"></use>
+                    <use href="./images/icons.svg#icon-facebook"></use>
                   </svg>
                 </a>
               </li>
               <li class="icon-line">
                 <a href="" class="icon-link">
                   <svg width="16" height="16" class="icon-social">
-                    <use href="./images/linkedin.svg#icon-linkedin-1"></use>
+                    <use href="./images/icons.svg#icon-linkedin"></use>
                   </svg>
                 </a>
               </li>
@@ -205,35 +205,32 @@
               <li class="icon-line">
                 <a href="" class="icon-link">
                   <svg width="16" height="16" class="icon-social">
-                    <use href="./images/instagram.svg#icon-instagram-2"></use>
+                    <use href="./images/icons.svg#icon-instagram"></use>
                   </svg>
                 </a>
               </li>
               <li class="icon-line">
                 <a href="" class="icon-link">
                   <svg width="16" height="16" class="icon-social">
-                    <use href="./images/twitter.svg#icon-twitter-1"></use>
+                    <use href="./images/icons.svg#icon-twitter"></use>
                   </svg>
                 </a>
               </li>
               <li class="icon-line">
                 <a href="" class="icon-link">
                   <svg width="16" height="16" class="icon-social">
-                    <use href="./images/facebook.svg#icon-facebook-1"></use>
+                    <use href="./images/icons.svg#icon-facebook"></use>
                   </svg>
                 </a>
               </li>
               <li class="icon-line">
                 <a href="" class="icon-link">
                   <svg width="16" height="16" class="icon-social">
-                    <use href="./images/linkedin.svg#icon-linkedin-1"></use>
+                    <use href="./images/icons.svg#icon-linkedin"></use>
                   </svg>
                 </a>
               </li>
              </ul>
-            </div>
-           </li>
-          </ul>
             </div>
          </section>
         <section class="portfolio-page" >
@@ -243,7 +240,7 @@
             <li class="portfolio-line">
               <div class="icon-container">
                 <img src="./images/banking.jpg" alt="Banking App" width="360" class="portfolio-img">
-                <p class="overflow">- 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                <p class="overlay">- 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
               </div>
               <div class="portfolio-container">
                 <h3 class="portfolio-descr">Banking App</h3>
@@ -253,7 +250,7 @@
             <li class="portfolio-line">
               <div class="icon-container">
                 <img src="./images/cashless.jpg" alt="Cashless Payment" width="360" class="portfolio-img">
-                <p class="overflow">- 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                <p class="overlay">- 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
               </div>
               <div class="portfolio-container">
                 <h3 class="portfolio-descr">Cashless Payment</h3>
@@ -263,7 +260,7 @@
             <li class="portfolio-line">
               <div class="icon-container">
                 <img src="./images/meditation.jpg" alt="Meditation App" width="360" class="portfolio-img">
-                <p class="overflow">- 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                <p class="overlay">- 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
               </div>
               <div class="portfolio-container">
                 <h3 class="portfolio-descr">Meditation App</h3>
@@ -273,7 +270,7 @@
             <li class="portfolio-line">
           <div class="icon-container">
             <img src="./images/taxi.jpg" alt="Taxi Service" width="360" class="portfolio-img">
-            <p class="overflow">- 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+            <p class="overlay">- 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
           </div>
          <div class="portfolio-container">
           <h3 class="portfolio-descr">Taxi Service</h3>
@@ -283,7 +280,7 @@
             <li class="portfolio-line">
               <div class="icon-container">
                 <img src="./images/screen.jpg" alt="Screen Illustrations" width="360" class="portfolio-img">
-                <p class="overflow">- 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                <p class="overlay">- 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
               </div>
               <div class="portfolio-container">
                 <h3 class="portfolio-descr">Taxi Service</h3>
@@ -293,7 +290,7 @@
             <li class="portfolio-line">
               <div class="icon-container">
                 <img src="./images/onlinecourses.jpg" alt="Online Courses" width="360" class="portfolio-img">
-                <p class="overflow">- 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                <p class="overlay">- 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
               </div>
               <div class="portfolio-container">
                 <h3 class="portfolio-descr">Online Courses</h3>
@@ -305,12 +302,47 @@
         </section>
     </main>
     <footer class="footer-page">
-       <div class="container">
-        <a href="./index.html" class="logo footer-logo">Web <span class="logo-span-footer">Studio</span></a>
-        <p class="footer-line">Increase the flow of customers and 
-         sales for your business with digitals
-          marketing & growth solutions.
-         </p> 
+       <div class="container container-footer">
+        <div class="footer-list-container">
+          <a href="./index.html" class="logo footer-logo">Web <span class="logo-span-footer">Studio</span></a>
+          <p class="footer-line">Increase the flow of customers and 
+           sales for your business with digitals
+            marketing & growth solutions.
+           </p> 
+          </div>
+          <div>
+            <p class="icon-footer-descr">Social media</p>
+            <ul class="icon-footer-list">
+              <li class="icon-footer-line">
+                <a class="icon-footer-link" href="">
+                  <svg width="24" height="24" class="icon-footer-svg">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="icon-footer-line">
+                <a class="icon-footer-link" href="">
+                  <svg width="24" height="24" class="icon-footer-svg">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="icon-footer-line">
+                <a class="icon-footer-link" href="">
+                  <svg width="24" height="24" class="icon-footer-svg">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="icon-footer-line">
+                <a class="icon-footer-link" href="">
+                  <svg width="24" height="24" class="icon-footer-svg">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
        </div>    
     </footer>
         
