--- a/index.html
+++ b/index.html
@@ -118,10 +118,9 @@
             </li>
            </ul>
             </div>
-               </li>
+          </li>
                <li class="team-list">
-            <img src="./images/tomford.jpg" alt="Tom Ford" class="img-team"
-            width="264">
+            <img src="./images/tomford.jpg" alt="Tom Ford" class="img-team" width="264">
             <div class="team-container">
               <h3 class="team-name">Tom Ford</h3> 
             <p class="team-prof">Frontend Developer</p>
