--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
                </div>
            </section>
          <section class="team-page">
-            <div class="container">
-              <h2 class="team-title">Our Team</h2>
+          <div class="container">
+            <h2 class="team-title">Our Team</h2>
             <ul class="team-line">
-                <li class="team-list">
+              <li class="team-list">
             <img src="./images/markguerrero.jpg" alt="Mark Guerrero" class="img-team"
             width="264">
             <div class="team-container">
@@ -231,6 +231,9 @@
               </li>
              </ul>
             </div>
+            </ul>
+
+          </div>
          </section>
         <section class="portfolio-page" >
           <div class="container">
@@ -344,5 +347,5 @@
           </div>
        </div>    
     </footer>
-        
+</body>  
 </html>
